added links & css

--- a/src/app/station/station.component.html
+++ b/src/app/station/station.component.html
@@ -1,4 +1,8 @@
 <span>
-  Station name is: {{station?.address}}, id = {{station?.id}}
+  <span class="station">Station {{station?.id}}</span> is on <span class="address">address {{station?.address}}</span>
 </span>
+<br>
+<a href="/stations/{{station?.id}}/metrics">Link</a>
+
+
 
