--- a/src/app/station/station.component.html
+++ b/src/app/station/station.component.html
@@ -2,7 +2,7 @@
   <span class="station">Station {{station?.id}}</span> is on <span class="address">address {{station?.address}}</span>
 </span>
 <br>
-<a href="/stations/{{station?.id}}/metrics">Link</a>
+<a href="/stations/{{station?.id}}">Metrics</a>
 
 
 
